fixed an issue /w radio btn not working on Firefox adding Width value

--- a/a3/style.css
+++ b/a3/style.css
@@ -936,6 +936,7 @@ fieldset {
     opacity: 0.01;
     z-index: 1;
     height: 100%;
+    width: 95%;
 }
 
 #booking-date input[type="radio"]:checked+label, .Checked+label {
